api memberships: allow find user by epr_uuid.
